--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 										<h2><a>Instant Messenger App</a></h2>
 									</header>
 									<a class="image fit"><img src="images/instantmessengerapp.jpg" alt="" /></a>
-									<p>This instant messenger application allows users to create an account and login to chat with other active users in any given room they may choose. All messages are displayed to each member of any given room using sockets along with the time and ID of the user that sends the message.</p>
+									<p>This instant messenger application allows users to create an account and login to chat with other active users in any given room they may choose. All messages are displayed to each member of any given room using sockets along with the time and ID of the user that sends the message.
+                                        It is recommended that you open two separate browser windows and access the site from each one with differing login information for each to test if interested.
+                                    </p>
 									<ul class="actions special">
 										<li><a href="https://instantmessengeapp.herokuapp.com/" target="_blank" class="button">OPEN APP</a></li>
 										<li><a href="https://github.com/kingcobra2/InstantMessenger" target="_blank" class="button">VIEW CODE</a></li>
